// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-parents Renders \`extra-details-parents\` with full parents 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\">
          <strong>Meta alarm</strong>
          <div class=\\"v-layout column\\">
            <div>Rules&nbsp;:</div>
            <div class=\\"rule-name\\">&nbsp;parent-rule-1-name</div><div class=\\"rule-name\\">&nbsp;parent-rule-2-name</div><div class=\\"rule-name\\">&nbsp;parent-rule-3-name</div>
          </div>
          <div>Causes : 3</div>
        </div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#6d4c41"
      icon="center_focus_weak"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-parents Renders \`extra-details-parents\` without rules 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div class=\\"text-md-center\\">
          <strong>Meta alarm</strong>
          <div class=\\"v-layout column\\">
            <div>Rules&nbsp;:</div>
          </div>
          <div>Causes : 3</div>
        </div>"
    top=""
  >
    <c-alarm-extra-details-chip-stub
      color="#6d4c41"
      icon="center_focus_weak"
    />
  </c-simple-tooltip-stub>
</div>
`;
